# winit-vulkan

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  changelog.md  manifest.yaml  run_android.sh  run_oculus.sh
app/: .gitignore  Cargo.toml  connect_prt.sh  manifest.yaml  run_android.sh  run_oculus.sh  x
app/shaders/: circle.frag  circle.vert  solid.vert
app/src/: android.rs  app.rs  lib.rs  main.rs  winit.rs
app/src/scene/: circle.rs  mod.rs  uniforms.rs
framework/: Cargo.toml
framework/src/: lib.rs
profiler/: Cargo.toml
profiler/src/: gui_app.rs  main.rs
render/: .gitignore  Cargo.toml
render-core/: Cargo.toml
render-core/src/: layout.rs  lib.rs  pipeline.rs
render-core/src/collect_state/: buffer_updates.rs  mod.rs  object_updates.rs  ordered_object_pool.rs  single_object.rs  uniform_updates.rs
render-core/src/state/: mod.rs  uniform.rs
render-macro/: Cargo.toml
render-macro/src/: define_layout.rs  lib.rs
render/src/: android.rs  lib.rs
render/src/util/: mod.rs
render/src/vulkan_backend/: config.rs  descriptor_sets.rs  mod.rs  object_resource_pool.rs  pipeline.rs  render_pass.rs  resource_manager.rs  swapchain_wrapper.rs
render/src/vulkan_backend/wrappers/: calibrated_timestamps.rs  capabilities_checker.rs  command_pool.rs  debug_report.rs  device.rs  image.rs  instance.rs  mod.rs  surface.rs  timestamp_pool.rs
renderer/: .gitignore  Cargo.toml  build.rs
renderer/shaders/: circle.frag  circle.vert
renderer/src/: layout.rs  lib.rs  object_handles.rs
renderer/src/collect_state/: mod.rs  object_updates.rs
renderer/src/pipelines/: circle.rs  mod.rs
renderer/src/state/: mod.rs  object_group.rs  single_object.rs  uniform.rs  uniform_state.rs
renderer/src/uniform_buffers/: map_stats.rs  mod.rs  time.rs
renderer/src/uniforms/: mod.rs
renderer/src/util/: image.rs
renderer/src/vulkan_backend/: descriptor_sets.rs  mod.rs  object_resource_pool.rs  pipeline.rs  resource_manager.rs  swapchain_wrapper.rs
renderer/src/vulkan_backend/wrappers/: device.rs  surface.rs
shaders/: solid.frag
src/: app.rs  helpers.rs  lib.rs  main.rs  resource_manager.rs  vulkan_backend.rs
src/util/: image.rs
src/vulkan_backend/: descriptor_sets.rs  helpers.rs  mod.rs  pipeline.rs  render_pass.rs  resource_manager.rs  swapchain_wrapper.rs
src/vulkan_backend/helpers/: command_pool.rs  image.rs  mod.rs
src/vulkan_backend/wrappers/: capabilities_checker.rs  debug_utils.rs  device.rs  image.rs  instance.rs  mod.rs  surface.rs
winit-vulkan/: Cargo.toml  build.rs
winit-vulkan/src/: android.rs  app.rs  lib.rs
winit-vulkan/src/util/: image.rs  mod.rs
winit-vulkan/src/vulkan_backend/: descriptor_sets.rs  mod.rs
winit-vulkan/src/vulkan_backend/wrappers/: capabilities_checker.rs  command_pool.rs  debug_utils.rs  instance.rs
