cargo-features = ["edition2024"]

[package]
name = "winit-vulkan"
version = "0.1.0"
edition = "2024"

[lib]
crate-type=["cdylib", "rlib"]

[[bin]]
name = "winit-vulkan"

[dependencies]
# system
winit = { version = "0.30.5", features = ["android-native-activity"] }
ash = { version = "0.38.0", features = ["linked"] }
jni = "0.21.1"

log = "0.4.22"
simple_logger = { version = "5.0.0"}

# errors
anyhow = { version = "1.0.86" }
thiserror = "1.0.63"

# sparkles
sparkles = {git = "https://github.com/skibon02/sparkles"}
sparkles-macro = {git = "https://github.com/skibon02/sparkles"}

android_logger = { version = "0.14.1", optional = true }
ash-window = "0.13.0"

[features]
default = []
android = ["dep:android_logger"]
