[package]
name = "app"
version = "0.1.0"
edition = "2024"

[lib]
crate-type=["cdylib", "rlib"]

[dependencies]
simple_logger = "5.0.0"
log = "0.4.22"
parking_lot = "0.12.5"

# system
winit = { version = "0.30.5", features = ["android-native-activity"] }

# android
jni = "0.21.1"
ndk-sys = { version = "0.6.0", optional = true }
ndk = { version = "0.9.0", optional = true }
android_logger = { version = "0.15.0", optional = true }

# errors
anyhow = { version = "1.0.86" }
thiserror = "2.0.1"

# sparkles
sparkles = { version = "0.2.0", git = "https://github.com/skibon02/sparkles.git", branch = "main"}
lazy_static = "1.5.0"


render = { path = "../render" }
render-core = { version = "0.1.0", path = "../render-core" }
smallvec = "1.13.2"
rand = "0.9.0"


[features]
default = []
android = ["render/android", "dep:ndk-sys", "dep:ndk", "dep:android_logger"]
