[package]
name = "framework"
version = "0.1.0"
edition = "2021"

[dependencies]
renderer = { path = "../renderer" }

# system
winit = { version = "0.30.5", features = ["android-native-activity"] }

# android
jni = "0.21.1"
ndk-sys = { version = "0.6.0", optional = true }
ndk = { version = "0.9.0", optional = true }
android_logger = { version = "0.14.1", optional = true }

log = "0.4.22"

# errors
anyhow = { version = "1.0.86" }
thiserror = "2.0.1"

# sparkles
sparkles = "0.1.4"
sparkles-macro = "0.1.4"

[features]
default = []
android = ["dep:android_logger", "dep:ndk-sys", "dep:ndk"]