[package]
name = "render"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { version = "0.38.0", features = ["linked"] }
ash-window = "0.13.0"

log = "0.4.22"

# android
jni = { version = "0.21.1", optional = true }
ndk-sys = { version = "0.6.0", optional = true }
ndk = { version = "0.9.0", optional = true }

# errors
anyhow = { version = "1.0.86" }
thiserror = "2.0.1"

# sparkles
sparkles = "0.1.4"
sparkles-macro = "0.1.4"

image = "0.25.2"
raw-window-handle = { version = "0.6.2", features = ["std", "alloc"] }
smallvec = { version = "1.13.2", features = ["const_new"] }

render-core = { version = "0.1.0", path = "../render-core" }
render-macro = { version = "0.1.0", path = "../render-macro" }

[features]
default = ["validation_layers", "portability_subset"]
android = ["dep:ndk-sys", "dep:ndk", "dep:jni"]
validation_layers = []
portability_subset = []