[package]
name = "winit-vulkan"
version = "0.1.0"
edition = "2021"

[dependencies]
# system
winit = { version = "0.30.5", features = ["android-native-activity"] }
ash = { version = "0.38.0", features = ["linked"] }
ash-window = "0.13.0"

# android
jni = "0.21.1"
ndk-sys = { version = "0.6.0", optional = true }
ndk = { version = "0.9.0", optional = true }

log = "0.4.22"
android_logger = { version = "0.14.1", optional = true }

# errors
anyhow = { version = "1.0.86" }
thiserror = "1.0.63"

# sparkles
sparkles = "0.1.4"
sparkles-macro = "0.1.4"

image = "0.25.2"

[features]
default = ["validation_layers"]
android = ["dep:android_logger", "dep:ndk-sys", "dep:ndk"]
validation_layers = []
